Checking in DQMOM documentation for Arches section of User Guide

--- a/doc/UserGuide/arches.bib
+++ b/doc/UserGuide/arches.bib
@@ -1,3 +1,4 @@
+
 @INCOLLECTION{hypre,
   title        = {The Design and Implementation of hypre, a Library of Parallel High Performance Preconditioners},
   year         = 2006,
@@ -71,6 +72,7 @@
   year         = 1993,
   address      = {Salt Lake City, UT},
 }
+
 
 @MASTERSTHESIS{Agosta21,
   author       = {A. Agosta},
@@ -579,7 +581,7 @@ pages = {122-136},
 }
 
 @ARTICLE{Gueret34,
-  author       = {C. Guerèt and M. Cathonnet and J.C. Boettner and F. Gaillard},
+  author       = {C. GuerÃ¨t and M. Cathonnet and J.C. Boettner and F. Gaillard},
   title        = {Experimental Study and Modeling of Kerosene Oxidation in a Jet-Stirred Flow Reactor},
   journal      = {Proceedings of the Combustion Institute},
   volume       = 23,
@@ -661,13 +663,14 @@ pages = {122-136},
 }
 
 @ARTICLE{Jimenez88,
-  author       = {J. Jim{\'e}nez and A. Li{\~n}{\'a}n and M. M. Rogers and F. J. Higuera},
+  author       = {J. Jimenez and A. Linan and M. M. Rogers and F. J. Higuera},
   title        = {A-priori Testing of Sub-Grid Models for Chemically Reacting Nonpremixed Turbulent Shear Flows},
   journal      = {Journal of Fluid Mechanics},
   year         = 1997,
   volume       = 349,
   pages        = {149-171},
 }
+
 
 @TECHREPORT{Kee101,
   title        = {Transport},
@@ -805,6 +808,7 @@ pages = {122-136},
   pages        = {191-211},
 }
 
+
 @ARTICLE{Krishnamoorthy160,
   AUTHOR =       {G. Krishnamoorthy and R. Rawat and P. J. Smith},
   TITLE =        {Parallel Computations of Radiative Heat Transfer Using the Discrete-Ordinates Method},
@@ -894,6 +898,7 @@ pages = {122-136},
   volume       = 36,
   pages        = {115-137},
 }
+
 
 @ARTICLE{Lockwood133,
   author       = {F. C. Lockwood and A. S. Naguib},
@@ -1619,7 +1624,6 @@ pages = {122-136},
 }
 
 
-
 @ARTICLE{Smith8,
   title        = {Radiation effects on large fire plumes},
   author       = {R. K. Smith},
@@ -1804,6 +1808,7 @@ pages = {122-136},
   organization = {The Combustion Institute},
 }
 
+
 @CONFERENCE{Marinov1995b,
   title        = {Detailed and Global Kinetics Model for Hydrogen},
   year         = {October 1995},
@@ -1844,7 +1849,6 @@ pages = {122-136},
   pages        = {221-273},
 }
 
-%JEREMY FIx THIS!!!  Not showing up....
 @ARTICLE{Pitz1986,
   title        = {Chemical Kinetics of the High-Pressure Oxidation of Normal-Butane and Its Relation to Engine Knock},
   author       = {W. J. Pitz and C. K. Westbrook},
@@ -1890,3 +1894,7 @@ pages = {122-136},
   address      = {New Mexico and California},
   note         = {},
 }
+
+
+
+
