--- a/doc/UserGuide/user_guide.tex
+++ b/doc/UserGuide/user_guide.tex
@@ -10,6 +10,10 @@
 \usepackage{subfig}
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{esint}
+\usepackage{amssymb}
+\usepackage[usenames]{color}
+
 
 \pdfcompresslevel=9
 \DeclareGraphicsExtensions{{.png},{.pdf},{.jpg},{jpeg}}
