Added the svn revision for visit.

--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -371,7 +371,7 @@ repository maintained at NERSC:
 \begin{verbatim}
 mkdir ``new_visit_dir''
 cd ``new_visit_dir'' 
-svn co http://portal.nersc.gov/svn/visit/trunk/ .
+svn co -r 9152 http://portal.nersc.gov/svn/visit/trunk/ .
 \end{verbatim}
 
 Create a new 'build' directory inside ''new\_visit\_dir'':
