Add documentation on cohesive zones.

--- a/doc/UserGuide/mpm.bib
+++ b/doc/UserGuide/mpm.bib
@@ -98,6 +98,14 @@
 	NUMBER = "2",
 	PAGES = "239-249"	}
 
+@ARTICLE{daphalapurkar,
+	AUTHOR = "Daphalapurkar, N.P. and Lu, H. and Coker, D. and Komanduri, R.",
+	TITLE = "Simulation of dynamic crack growth using the generalized interpolation material point (GIMP) method",
+	JOURNAL = "Int. J. Fracture",
+	YEAR = "2007",
+	VOLUME = "143",
+	PAGES = "79-102"	}
+
 @ARTICLE{flory1,
 	AUTHOR = "Flory, PJ",
 	TITLE = "Thermodynamic relations for high elastic materials",
