--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -803,7 +803,8 @@ Following are step-by-step instructions for installing the
 \textbf{Uintah Computational Framework} on \textbf{Mac OSX}.  It is
 assumed that all commands are run as administrator (which may require
 a sudo).  These instructions were tested on OSX 10.5.6 and 10.5.7 but
-should work on previous versions.
+should work on previous versions.  \textbf{If you have Snow Leopard,
+go to Section 10.}
 
 \subsection{Installing Developer Tools}
 Install the suite of developer tools that are packaged with Mac OS X.
@@ -1118,8 +1119,8 @@ make -j#
 			tar -xvf hypre-2.6.0b
 			cd hypre-2.6.0b/src
 			./configure --prefix=/Users/username/uintah/packages/hypre-2.6.0b-install 
-												 \--with-MPI-include=/Users/username/uintah/packages/openmpi-1.4.1-install/include 
-												 \--with-MPI-lib-dirs=/Users/username/uintah/packages/openmpi-1.4.1-install/lib 
+												 \--with-MPI-include=/Users/username/uintah/packages/openmpi-1.4.x-install/include 
+												 \--with-MPI-lib-dirs=/Users/username/uintah/packages/openmpi-1.4.x-install/lib 
 												 \CC='gcc -arch x86_64' \CXX='g++ -arch x86_64' \F77='gfortran -arch x86_64' 
 		\end{verbatim}
 		Then
@@ -1129,24 +1130,24 @@ make -j#
 		\end{verbatim}
 		
 		\subsection{PETSc}
-		For the current release of Uintah, Petsc2.3.3 has been found to work well. Download the source from here: \url{http://www.mcs.anl.gov/petsc/petsc-as/download/index.html}.
+		For the current release of Uintah, Petsc2.3.3 or Petsc2.2.0b has been found to work well. Download the source from here: \url{http://www.mcs.anl.gov/petsc/petsc-as/download/index.html}.
 		Then browse to the packages directory and configure as follows:
 		{\small
 		\begin{verbatim}
 			cd ~/uintah/packages
-			tar -xvf petsc-2.2.0b-p15.tar.gz
-			cd petsc-2.2.0b-p15
+			tar -xvf petsc-2.x.yb-p15.tar.gz
+			cd petsc-2.x.yb-p15
 			./config/configure.py \--with-shared \--with-debugging=0 
-			\--with-mpi-include=/Users/username/uintah/packages/openmpi-1.4.1-install/include 
-			\--with-mpi-lib=/Users/username/uintah/packages/openmpi-1.4.1-install/lib/libmpi.dylib 
-			\--without-fortran \--prefix=/Users/username/uintah/packages/petsc-2.3.3-p15-install
+			\--with-mpi-include=/Users/username/uintah/packages/openmpi-1.4.x-install/include 
+			\--with-mpi-lib=/Users/username/uintah/packages/openmpi-1.4.x-install/lib/libmpi.dylib 
+			\--without-fortran \--prefix=/Users/username/uintah/packages/petsc-2.x.y-p15-install
 		\end{verbatim}}
 		Finally,
 		{\small
 		\begin{verbatim}
+			PETSC_DIR=/Users/username/uintah/packages/petsc-2.x.y-p15-install; export PETSC_DIR
 			make all test
 			make install
-			PETSC_DIR=/Users/username/uintah/packages/petsc-2.3.3-p15-install; export PETSC_DIR
 		\end{verbatim}}
 		
 		\subsection{Uintah}
@@ -1163,7 +1164,6 @@ make -j#
 			\--with-hypre=/Users/username/uintah/packages/hypre-2.6.0b-install 
 			\--with-petsc=/Users/username/uintah/packages/petsc-2.3.3-p15-install 
 			\--enable-optimized='-02' \--enable-64bit 
-			\--with-teem=/Users/username/uintah/packages/teem-install 
 			CC=gcc CXX=g++ F77=gfortran CFLAGS=-m64 CXXFLAGS=-m64 FFLAGS=-m64
 			PETSC_ARCH=darwin10.3.1-c-opt USES_ICE=yes USES_MPM=yes
 		\end{verbatim}} %
